@@ -659,26 +659,26 @@ void fasp_aux_givens (const REAL beta,
 
 INT fasp_poisson_gmg_1D (REAL *u,
                          REAL *b,
-                         INT nx,
-                         INT maxlevel,
-                         REAL rtol,
+                         const INT nx,
+                         const INT maxlevel,
+                         const REAL rtol,
 					     const SHORT prtlvl);
 
 INT fasp_poisson_gmg_2D (REAL *u,
                          REAL *b,
-                         INT nx,
-                         INT ny,
-                         INT maxlevel,
-                         REAL rtol,
+                         const INT nx,
+                         const INT ny,
+                         const INT maxlevel,
+                         const REAL rtol,
                          const SHORT prtlvl);
 
 INT fasp_poisson_gmg_3D (REAL *u,
                          REAL *b,
-                         INT nx,
-                         INT ny,
-                         INT nz,
-                         INT maxlevel,
-                         REAL rtol,
+                         const INT nx,
+                         const INT ny,
+                         const INT nz,
+                         const INT maxlevel,
+                         const REAL rtol,
 					     const SHORT prtlvl);
 
 void fasp_poisson_fgmg_1D (REAL *u,
